# MyGE

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
doc/html/: annotated.html  class_engine-members.html  class_engine.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  engine_8cpp_source.html  engine_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  main_8cpp_source.html  main_8h_source.html  pages.html  todo.html
doc/html/search/: all_0.js  functions_1.js  search.js
doc/latex/: annotated.tex  class_engine.tex  class_engine__coll__graph.dot  class_engine__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex  todo.tex
doc/rtf/: dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.rtf  dir_d44c64559bbebec7f509842c48db8b23_dep.dot  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  refman.rtf
include/: engine.h  main.h
res/scripts/: config.json  engineInput.xml  entities.json  playerInputMap.xml
res/shaders/: debugFragment.glsl  debugVertex.glsl  dirLightFragment.glsl  fragment.glsl  lightVertex.glsl  pointLightFragment.glsl  shadowStencilVertex.glsl  skyboxFragment.glsl  skyboxVertex.glsl  spotLightFragment.glsl  vertex.glsl
src/: engine.cpp  main.cpp  main.h
src/core/: CMakeLists.txt  Camera.cpp  Camera.h  Engine.cpp  Engine.h  EntityManager.cpp  EntityManager.h  GameObjectFactory.cpp  GameObjectFactory.h  IManager.h  Messages.h  Platform.cpp  Platform.h  ResourceManager.cpp  ResourceManager.h  Spatial.h  System.cpp  System.h
src/core/debug/: Logger.cpp  Logger.h  MyAssert.h
src/core/math/: CMakeLists.txt  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vec3.cpp  Vec4.cpp  Vec4.h
src/core/memory/: ObjectPool.h
src/debug/: CMakeLists.txt  DebugRenderManager.cpp  DebugRenderManager.h  Logger.cpp  Logger.h  MyAssert.h
src/ecs/: EntityManager.cpp  EntityManager.h
src/events/: CMakeLists.txt  EventManager.cpp  EventManager.h  Events.h  InputContext.cpp  InputContext.h  InputTypes.h
src/math/: CMakeLists.txt  ColorRGBA.cpp  ColorRGBA.h  Math.cpp  Math.h  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp
src/memory/: ObjectPool.h
src/render/: CMakeLists.txt  Geometric.h  GeometricPassShader.cpp  GeometricPassShader.h  LightPassShader.cpp  LightPassShader.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/resource/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h
src/systems/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.h  Component.h  InputSystem.cpp  InputSystem.h  LightSystem.cpp  LightSystem.h  MeshSystem.cpp  MeshSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerControllerSystem.cpp  PlayerControllerSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  SkyboxSystem.cpp  SkyboxSystem.h  SpatialSystem.cpp  SpatialSystem.h  System.h
